--- a/testng/httpclient/test-output/old/Default suite/classes.html
+++ b/testng/httpclient/test-output/old/Default suite/classes.html
@@ -4,11 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>org.httpclient.cookies.GetCookies</td>
+<td>org.httpclient.post.PostTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>testPostMethod</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>testGetCookies</td>
