--- a/testng/httpclient/test-output/old/Default suite/methods.html
+++ b/testng/httpclient/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="abef66">  <td>18/05/10 23:42:19</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;GetCookies.beforetest()[pri:0, instance:org.httpclient.cookies.GetCookies@1fc5af1]">&gt;&gt;beforetest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16581349</td>   <td></td> </tr>
-<tr bgcolor="abef66">  <td>18/05/10 23:42:19</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetCookies.testGetCookies()[pri:0, instance:org.httpclient.cookies.GetCookies@1fc5af1]">testGetCookies</td> 
-  <td>main@16581349</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>18/05/11 17:19:29</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;PostTest.beforetest()[pri:0, instance:org.httpclient.post.PostTest@653222]">&gt;&gt;beforetest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@27640734</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>18/05/11 17:19:29</td>   <td>46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.testGetCookies()[pri:0, instance:org.httpclient.post.PostTest@653222]">testGetCookies</td> 
+  <td>main@27640734</td>   <td></td> </tr>
+<tr bgcolor="dc63ce">  <td>18/05/11 17:19:29</td>   <td>541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PostTest.testPostMethod()[pri:0, instance:org.httpclient.post.PostTest@653222]">testPostMethod</td> 
+  <td>main@27640734</td>   <td></td> </tr>
 </table>
